# vocabs

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: deps.py  main.py  static.py
app/core/: config.py
app/data/: script.py
app/factory/: problem.py
app/managers/: analyzer.py  publisher.py  test_manager.py
app/routers/: __init__.py  paper.py  result.py  user.py
app/schemas/: __init__.py  api.py  auth.py  enum.py  problem.py  test_paper.py
frontend/: index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tscofig.json  tsconfig.build.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: Sidebar.tsx  SidebarItems.tsx  UserMenu.tsx
frontend/src/components/Test/: TestDetail.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  _layout.tsx  home.tsx  login.tsx  signup.tsx
frontend/src/routes/_layout/: admin.tsx  index.tsx  paper.tsx  result.tsx  submit.tsx
